# growth_1

./: .gitignore  1  1.pub  README.md  process_data.ps1
benchmark/: astra_recon.py  eval_loss.py  sphere_gui.py  utils.py
data/dendrite_growth/: dendrite_29.yaml  transforms_00.json  transforms_00_to_29.json  transforms_29.json
nerf_data/: .gitignore  requirements.txt
nerf_data/experimental/: transforms.blend  transforms.blend1
nerf_data/experimental/balls/: ivan-balls 3.ang  ivan-balls 3.xtekct
nerf_data/experimental/balls7/: ivan-balls-7.xtekct
nerf_data/experimental/balls7_th/: _ctdata.txt
nerf_data/experimental/cube/: ivan-cube.ang  ivan-cube.xtekct
nerf_data/experimental/pillars/: pillars.ang  pillars.xtekct
nerf_data/scripts/: color_convert.py  combine_transforms.ipynb  combine_transforms.py  compute_transforms.py  kelvin.yaml  lattice.yaml  nerf_xray_importer.py  npy_to_raw.py  raw_to_npy.py  read_flat_field.py  resize_for_eval.py  scale_lattice_yaml.ipynb  show_deformation.py  show_hist.py  show_slices.py  show_slices3.py  tiff_to_png.py
nerf_data/synthetic/balls/: balls.yaml
nerfstudio/: .gitignore  pyproject.toml
nerfstudio-xray/: README.md
nerfstudio-xray/growth_xray/: pyproject.toml
nerfstudio-xray/growth_xray/growth_xray/: exporter.py  growth_config.py  growth_deformation_fields.py  growth_vfield_model.py  growth_vfield_pipeline.py  refine_growth_vfield.py
nerfstudio-xray/nerf-xray/: pyproject.toml
nerfstudio-xray/nerf-xray/nerf_xray/: canonical_config.py  canonical_field.py  canonical_model.py  canonical_pipeline.py  combine_forward_backward_checkpoints.py  def_field_vis.py  deformation_fields.py  field_mixers.py  multi_camera_dataparser.py  objects.py  parser_config.py  plot_alpha.py  refine_bspline_field.ipynb  refine_field.py  refine_vfield.py  replace_voxel_grid.py  spatiotemporal_mix_config.py  utils.py  vfield_config.py  vfield_model.py  vfield_pipeline.py  voxel_field.py  xray_datamanager.py  xray_dataparser.py  xray_def_config.py  xray_renderer.py  xray_temporal_dataloaders.py  xray_temporal_datamanager.py
nerfstudio/nerfstudio/cameras/: cameras.py
nerfstudio/nerfstudio/configs/: experiment_config.py
scripts/: .prepare_dendrite_and_animate.sh.swp  demo_dendrite.sh  demo_synthetic.sh  eval_dendrite.py  eval_dendrite_4d.py  export_dendrite.py  export_pred_2d.py  generate_and_animate.sh  generate_data.py  infer_downscale_factor.py  parallel_beam_projector.py  prepare_dendrite_and_animate.sh  prepare_dendrite_data_growth.py  run_dset.sh  submit.sh  view_pyvista.py  volume_grid_utils.py
xray_projection_render/: .gitignore  PYTHON_USAGE.md  README.md  api.go  build.sh  example_usage.py  go.mod  go.sum  main.go  main_test.go  pyproject.toml
xray_projection_render/.github/workflows/: release.yml
xray_projection_render/binder/: postBuild  requirements.txt
xray_projection_render/deformations/: deformations.go
xray_projection_render/examples/: demo.ipynb
xray_projection_render/objects/: objects.go
xray_projection_render/xray_projection_render/: __init__.py  xray_renderer.py
(+15 files in other folders)
